@@ -9,7 +9,6 @@
   <property name="version" value="1.0.2"/>
 
   <property name="src.dir" location="src/java"/>
-  <property name="res.dir" location="src/resources"/>
   <property name="cdic.dir" location="src/compiled-dictionaries"/>
   <property name="test.dir" location="src/test"/>
   <property name="dist.dir" location="dist"/>
@@ -33,7 +32,6 @@
     <path refid="classpath"/>
     <pathelement location="${bin.dir}/classes/java" />
     <pathelement location="${bin.dir}/classes/test" />
-    <pathelement location="${res.dir}"/>
     <pathelement location="${cdic.dir}/${dictype}"/>
   </path>
 
@@ -90,6 +88,11 @@
            target="1.5">
       <compilerarg line="-Xlint -Xlint:-serial"/>
     </javac>
+    <!-- Copy the resources folder (if existent) -->
+    <copy todir="${bin.dir}/classes/java" includeEmptyDirs="false">
+      <globmapper from="resources/*" to="*" handledirsep="yes"/>
+      <fileset dir="src" includes="resources/**"/>
+    </copy>
   </target>
 
   <!-- Compile source -->
